# anak-tournaments

./: .env.dist  .env.example  .gitignore  AGENTS.md  DEPLOYMENT_CHANGES.md  DOCKER_DEPLOYMENT.md  LICENCE  LICENSE  Makefile  README.md  TOURNAMENT_REFACTOR_ROADMAP.md  aqt-backend.code-workspace  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  overwatch-tournaments.code-workspace  pyrightconfig.json
backend/: .dockerignore  AUTH_MIGRATION.md  DISCORD_OAUTH.md  Dockerfile  MICROSERVICES.md  MIGRATION_DISCORD.md  MIGRATION_DISCORD_CHANNELS.md  README.md  alembic.ini  pyproject.toml  teams.json
backend/app/: main.py
backend/app-service/: main.py  pyproject.toml  pytest.ini  reproduce_issue.py  test_registration_validation.py
backend/app-service/tests/: conftest.py  test_analytics_flows.py  test_division_grid_marketplace.py  test_registration_route.py  test_tournament_recalculation_events.py  test_user_profile_flows.py  test_workspace_service.py
backend/app/src/: api.py
backend/auth-service/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/auth-service/src/: models.py
backend/auth-service/tests/: test_api_key_service.py  test_auth_sessions.py  test_rbac_admin_users.py
backend/auth_service/: README.md  pyproject.toml
backend/balancer-service/: .env.example  README.md  main.py  ow_balancer_cpsat.py  pyproject.toml  serve.py  teams.json
backend/balancer-service/scripts/: benchmark_balancer_runtime.py
backend/balancer-service/src/: composition.py  config_presets.py  cpsat_adapter.py  cpsat_bridge.py  genetic_adapter.py  mixtura_balancer_adapter.py  nsga_adapter.py  service.py  views.py
backend/balancer-service/tests/: test_admin_balancer_serialization.py  test_admin_use_case_architecture.py  test_api_key_limits_and_policy.py  test_balancer_config.py  test_balancer_registration_roles.py  test_balancer_role_activity.py  test_balancer_status_checkin.py  test_feasibility_analyzer.py  test_public_balancer_architecture.py  test_rating_normalizer.py  test_registration_form_config_validation.py  test_route_prefixes.py  test_workspace_auth_dependencies.py
backend/discord/: README.md  main.py  pyproject.toml
backend/discord-service/: .env.example  main.py  pyproject.toml
backend/discord-service/src/: feedback.py
backend/discord-service/tests/: test_feedback.py
backend/env/: auth.env.example  balancer.env.example  common.env.example  discord.env.example  parser.env.example
backend/migrations/: env.py
backend/migrations/versions/: 0d49e62b7a1f_pg_trgm_user_battle_tag_search_indexes.py  1212b91f0782_.py  13ff241c4939_.py  1cdb89deeacd_.py  1f4f0e9d8c2b_expand_rbac_permissions_for_admin_v1.py  2b1f6c7d9e10_add_balancer_schema.py  2e53410d9154.py  3c7a9d1e4b22_add_balancer_player_role_entries.py  52a88c144ff9.py  595d8f43e048.py  5a413d179531_.py  60be498bbf6c_.py  70cc654fb60b_.py  73ae75b49806.py  7c1b9f4e2aa1_user_stats_perf_indexes.py  8dadcd2ae8b0_.py  (+22 more)
backend/mixtura-balancer-tournament/: Dockerfile
backend/parser/: backup.json  balanced_teams.csv  balanced_teams.json  filter_owal_players.py  main.py  test.py  worker.py
backend/parser-service/: main.py  pyproject.toml  serve.py  test_registration_form_config_validation.py  worker.py
backend/scripts/: lint.sh  migrate_achievement_images.py  test.sh
backend/shared/: README.md  division_grid.py  pyproject.toml
backend/tests/: test_db_pool_config.py
backend/tournament-service/: README.md  main.py  serve.py
backend/twitch-service/: pyproject.toml
(+1218 files in other folders)
