[project]
name = "discord-bot"
version = "1.0.0"
description = "Discord bot for collecting tournament match logs"
authors = [
    { name = "CraazzzyyFoxx" }
]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
